# VoxelEngine

./: .gitignore  CMakeLists.txt
Src/: Mesh.cpp  Screen.cpp  Shader.cpp  main.cpp
Src/includes/: Color.h  Mesh.h  Quad.h  Screen.h  Shader.h  Shape.h
